# FORMULA_1_PREDICTOR_STREAMLIT_2026

./: .env  .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  Makefile  PROJECT_COMPLETE.md  QUICK_REFERENCE.md  README.md  RUNNING.md  RUN_STREAMLIT.bat  SEASON_MAINTENANCE.md  STREAMLIT_README.md  accuracy_tracking.json  analysis_results.md  app.py  db  fastf1_integration.py  main.py  pyproject.toml  requirements.txt  theme.py
.streamlit/: config.toml
api/: routes.py  schemas.py
config/: settings.py
data/: __init__.py  circuit_data.py  driver_data.py  driver_traits_database.py  season_2026.py
data/config/: constructor_strengths.json
data/historical/: README.md
engine/: feature_engineering.py  predictor.py  probability_model.py
output/: canada_prediction_report.html
pages/: __init__.py  circuit_analysis.py  comparisons.py  driver_analytics.py  live_data.py  model_accuracy.py  predictions.py
reports/: html_report.py
reports/templates/: report.html
scripts/: archive_season.py  backtest.py  backtest_2025_season.py  data_quality_report.py  generate_static_site.py  ingest_f1_data.py  master_transformation.py  post_race_update.py  quick_test.py  recalibrate_model.py  verify_accuracy.py
src/api/: main.py  routes.py
src/config/: __init__.py  settings.py
src/data/: __init__.py  circuit_data.py  driver_data.py  driver_traits_database.py  fastf1_integration.py  schemas.py  season_2026.py  teams.py
src/database/: __init__.py  models.py
src/engine/: __init__.py  auto_learning.py  (+14 more)
tests/: test_feature_engineering.py  test_predictor.py
(+37 files in other folders)
